FIX: Prevent scroll locking on mobile devices

--- a/src/components/molecules/card/components/ButtonQuickView/ButtonQuickView.module.scss
+++ b/src/components/molecules/card/components/ButtonQuickView/ButtonQuickView.module.scss
@@ -13,9 +13,3 @@
         @extend._buttonIcon;
     }
 }
-
-@media (max-width: 767.98px) {
-    .ButtonQuickView{
-        display: none;
-    }
-}
