--- a/src/components/organisms/modal/ProductModal/ProductModal.module.scss
+++ b/src/components/organisms/modal/ProductModal/ProductModal.module.scss
@@ -111,6 +111,29 @@
     .ProductModal{
         ._productDetail{
             width: 700px;
+            overflow: auto;
+            height: 80dvh;
         }
     }
+}
+@media (max-width: 767.98px) {
+    .ProductModal{
+        ._productDetail{
+            width: 500px;
+        }
+    } 
+}
+@media (max-width: 575.98px) {
+    .ProductModal{
+        ._productDetail{
+            width: 330px;
+        }
+    } 
+}
+@media (max-width: 359.98px) {
+    .ProductModal{
+        ._productDetail{
+            width: 250px;
+        }
+    } 
 }
